infra/traefik/traefik/redirects/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: redirects
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`${BASE_DOMAIN}`)
      middlewares:
        - name: teslamate-redirect
          namespace: traefik
        - name: teslamate-grafana-redirect
          namespace: traefik
        - name: github-redirect
          namespace: traefik
        - name: prometheus-redirect
          namespace: traefik
        - name: kubernetes-dashboard-redirect
          namespace: traefik
      services:
        - kind: TraefikService
          name: noop@internal
